--- a/KLogger/KLogger.vcxproj
+++ b/KLogger/KLogger.vcxproj
@@ -141,10 +141,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AuxFunc.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="Klogger.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AuxFunc.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Klogger.h" />
     <ClInclude Include="console.h" />
